fixing send button mobile

--- a/small.css
+++ b/small.css
@@ -191,9 +191,15 @@
   font-size: 0.8em;
 }
 
+#formBottom {
+
+}
+
 #formBottom #sendContainer button {
-  width: 2em;
-  height: 2em;
+  background-color: red;
+  width: 2em !important;
+  height: 2em !important;
+  margin-left: 0.2em;
 }
 
 #about-area  {
